objects/TW1_Custom_Settings__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <fields>
        <fullName>ID_Agendar_com_Cliente__c</fullName>
        <label>ID Task Tarefa Agendar com Cliente</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ID_Aguardar_Documentacao_Contrato__c</fullName>
        <label>ID Task Aguardar Documentação Contrato</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ID_Aguardar_Documentacao_Credito__c</fullName>
        <label>ID Task Aguardar Documentação de Crédito</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ID_Analisar_Caso__c</fullName>
        <label>ID Task Analisar Caso</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ID_Analisar_Contrato__c</fullName>
        <label>ID Task Analisar Contrato</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ID_Analisar_Credito__c</fullName>
        <label>ID Task Analisar Crédito</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ID_Analisar_Reclamacao__c</fullName>
        <label>ID Task Analisar Reclamação</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ID_Analisar_Sugestao__c</fullName>
        <label>ID Task Analisar Sugestão</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ID_Atualizacao_Cadastral__c</fullName>
        <label>ID Task Atualização Cadastral</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ID_Caso_AF_Comercial__c</fullName>
        <label>ID Caso AF Comercial</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ID_Caso_Alienacao_Fiduciaria__c</fullName>
        <label>ID Caso Alienação Fiduciária</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ID_Caso_Alteracao_de_Vencimento__c</fullName>
        <label>ID Caso Alteracao de Vencimento</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ID_Caso_Antecipacao__c</fullName>
        <label>ID Caso Antecipação</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ID_Caso_Cessao_Direito__c</fullName>
        <label>ID Caso Cessão de Direito</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ID_Caso_Conferencia_Contratos_AF__c</fullName>
        <label>ID Caso Conferência de Contratos de AF</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ID_Caso_Conferencia_Contratos_Venda__c</fullName>
        <label>ID Caso Conferência de Contratos Venda</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ID_Caso_Conferencia_Contratos__c</fullName>
        <label>ID Caso Conferência de Contratos</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ID_Caso_Entrega_de_Chaves__c</fullName>
        <label>ID Caso Entrega de Chaves</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ID_Caso_Entrega_de_Documentacao__c</fullName>
        <label>ID Caso Entrega de Documentação</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ID_Caso_Escritura_Definitiva_Compra_Vend__c</fullName>
        <label>ID Caso Escritura Definitiva Compra Vend</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ID_Caso_Falecimento_Cliente__c</fullName>
        <label>ID Caso Falecimento Cliente</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ID_Caso_Identificacao_de_Quitacao__c</fullName>
        <label>ID Caso Identificacao de Quitacao</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ID_Caso_Implantar_Custas__c</fullName>
        <label>ID Caso Implantar Custas</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ID_Caso_Implantar_Negociacao__c</fullName>
        <label>ID Caso Implantar Negociação</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ID_Caso_Informacao__c</fullName>
        <label>ID Caso Informação</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ID_Caso_Leilao__c</fullName>
        <label>ID Caso Leilao</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ID_Caso_Permuta__c</fullName>
        <label>ID Caso Permuta</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ID_Caso_Quitacao__c</fullName>
        <label>ID Caso Quitação</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ID_Caso_Realizar_Reintegracao_Posse__c</fullName>
        <label>ID Caso Realizar Reintegração de Posse</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ID_Caso_Realizar_Rescisao_Judicial__c</fullName>
        <label>ID Caso Realizar Rescisao Judicial</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ID_Caso_Repasse__c</fullName>
        <label>ID Caso Repasse</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ID_Caso_Rescisao_Venda_Nova_Fin__c</fullName>
        <label>ID Caso Rescisão Venda Nova Fin</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ID_Caso_Rescisao__c</fullName>
        <label>ID Caso Rescisão</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ID_Caso_Rescisao_com_Venda_Nova_RC__c</fullName>
        <label>ID Caso Rescisão com Venda Nova RC</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ID_Caso_Retomada__c</fullName>
        <label>ID Caso Retomada</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ID_Caso_Vistoria_Unidade__c</fullName>
        <label>ID Caso Vistoria Unidade</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ID_Comunicar_Cliente__c</fullName>
        <label>ID Task Comunicar Cliente</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ID_Criar_Simulacao_Antecipacao__c</fullName>
        <label>ID Task Criar Simulação de Antecipação</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ID_FILA_Analise_Credito_Financiam__c</fullName>
        <label>ID FILA Análise de Crédito Financiamento</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ID_FILA_Analise_Financeira_Contratos__c</fullName>
        <label>ID FILA Análise Financeira Contratos</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ID_FILA_Analise_Juridica_Contratos__c</fullName>
        <label>ID FILA Análise Jurídica Contratos</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ID_FILA_Cartorio__c</fullName>
        <label>ID FILA Cartório</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ID_FILA_Consultor_Relacionamento__c</fullName>
        <label>ID FILA Consultor de Relacionamento</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ID_FILA_Consultor_de_Atendimento__c</fullName>
        <label>ID FILA Consultor de Atendimento</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ID_FILA_Contas_a_Receber__c</fullName>
        <label>ID FILA Contas a Receber</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ID_FILA_Contratos__c</fullName>
        <label>ID FILA Contratos</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ID_FILA_Coordenador_Financiamento__c</fullName>
        <label>ID FILA Coordenador Financiamento</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ID_FILA_DIretoria_Juridica__c</fullName>
        <label>ID FILA Diretoria Jurídica</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ID_FILA_Despachante__c</fullName>
        <label>ID FILA Despachante</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ID_FILA_Diretoria_Comercial__c</fullName>
        <label>ID FILA Diretoria Comercial</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ID_FILA_Diretoria_Financeira__c</fullName>
        <label>ID FILA Diretoria Financeira</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ID_FILA_Engenharia__c</fullName>
        <label>ID FILA Engenharia</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ID_FILA_Equipe_Comercial__c</fullName>
        <label>ID FILA Equipe Comercial</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ID_FILA_Equipe_Juridica_Externa__c</fullName>
        <label>ID FILA Equipe Jurídica Externa</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ID_FILA_Equipe_Juridica_Interna__c</fullName>
        <label>ID FILA Equipe Jurídica Interna</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ID_FILA_Financiamento_PJ__c</fullName>
        <label>ID FILA Financiamento PJ</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ID_FILA_Gerente_Comercial__c</fullName>
        <label>ID FILA Gerente Comercial</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ID_FILA_Gerente_Financiamento__c</fullName>
        <label>ID FILA Gerente Financiamento</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ID_FILA_Gerente_Jur_dico__c</fullName>
        <label>ID FILA Gerente Jurídico</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ID_FILA_Gestor_Financeiro__c</fullName>
        <label>ID FILA Gestor Financeiro</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ID_FILA_Gestor_de_Relacionamento__c</fullName>
        <label>ID FILA Gestor de Relacionamento</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ID_FILA_Manutencao__c</fullName>
        <label>ID FILA Manutenção</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ID_FILA_Operador_Repasse_FInanciamento__c</fullName>
        <label>ID FILA Operador Repasse FInanciamento</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ID_FILA_Projetos__c</fullName>
        <label>ID FILA Projetos</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ID_FILA_Qualidade__c</fullName>
        <label>ID FILA Qualidade</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ID_FILA_Registro_Interno_Financiamento__c</fullName>
        <label>ID FILA Registro Interno Financiamento</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ID_Fila_Controle_de_Financiamento__c</fullName>
        <label>ID Fila Controle de Financiamento</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ID_Fila_Planejamento_Orcamentario__c</fullName>
        <label>ID Fila Planejamento Orçamentário</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ID_Fornecer_Feedback_Interno__c</fullName>
        <label>ID Task Fornecer Feedback Interno</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ID_Gerar_Boleto_Antecipacao__c</fullName>
        <label>ID Task Gerar Boleto de Antecipação</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ID_Informar_tratativa_ao_cliente__c</fullName>
        <label>ID Task Informar tratativa ao cliente</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ID_Negociar_Com_cliente__c</fullName>
        <label>ID Task Negociar Com cliente</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ID_Perfil_Gerente_Financiamento__c</fullName>
        <label>ID Perfil Gerente Financiamento</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ID_Perfil_Gestor_Financeiro__c</fullName>
        <label>ID Perfil Gestor Financeiro</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ID_Perfil_Operador_Financiamento__c</fullName>
        <label>ID Perfil Operador Financiamento</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ID_Providenciar_Minuta__c</fullName>
        <label>ID Task Providenciar Minuta</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ID_Renegociar_com_cliente__c</fullName>
        <label>ID Task Renegociar com cliente</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ID_Resolver_Pendencia__c</fullName>
        <label>ID Task Resolver Pendência</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ID_Solicitar_Comprovante_Residencia__c</fullName>
        <label>ID Task Solicitar Comprovante Residencia</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ID_Solicitar_Documentos_Contrato__c</fullName>
        <label>ID Task Solicitar Documentos do Contrato</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ID_Solicitar_Documentos_de_Credito__c</fullName>
        <label>ID Task Solicitar Documentos de Crédito</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ID_TASK__c</fullName>
        <label>ID Task Encaminhar para a Construtora Re</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ID_Task_Acompanhar_Assinatura__c</fullName>
        <label>ID Task Acompanhar Assinatura</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ID_Task_Acompanhar_agendamento__c</fullName>
        <label>ID Task Acompanhar agendamento</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ID_Task_Adequar_Unidade_para_Vistoria__c</fullName>
        <label>ID Task Adequar Unidade para Vistoria</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ID_Task_Agendar_Assinatura_Cliente__c</fullName>
        <label>ID Task Agendar Assinatura Cliente</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ID_Task_Agendar_Assinatura_Rescisao__c</fullName>
        <label>ID Task Agendar Assinatura Rescisao</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ID_Task_Agendar_Assinatura_Termo_Aditivo__c</fullName>
        <label>ID Task Agendar Assinatura Termo Aditivo</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ID_Task_Agendar_Assinatura__c</fullName>
        <label>ID Task Agendar Assinatura</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ID_Task_Agendar_Entrega_Chaves__c</fullName>
        <label>ID Task Agendar Entrega Chaves</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ID_Task_Agendar_Entrega_Documentacao__c</fullName>
        <label>ID Task Agendar Entrega Documentacao</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ID_Task_Agendar_Reuniao_cliente__c</fullName>
        <label>ID Task Agendar Reunião cliente</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ID_Task_Agendar_Vistoria_com_Cliente__c</fullName>
        <label>ID Task Agendar Vistoria com Cliente</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ID_Task_Agendar_com_cliente_Res_Vend_Fin__c</fullName>
        <label>ID Task Agendar com cliente Res.Vend.Fin</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ID_Task_Aguardar_Contato_Cliente__c</fullName>
        <label>ID Task Aguardar Contato Cliente</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ID_Task_Aguardar_Doc_Contrato_Sem_Tipo__c</fullName>
        <label>ID Task Aguardar Doc Contrato Sem Tipo</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ID_Task_Aguardar_Documentacao_Cliente__c</fullName>
        <label>ID Task Aguardar Documentação Cliente</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ID_Task_Aguardar_Documentos_Esc_Definiti__c</fullName>
        <label>ID Task Aguardar Documentos Esc.Definiti</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ID_Task_Aguardar_Leilao__c</fullName>
        <label>ID Task Aguardar Leilão</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ID_Task_Aguardar_Minuta_Externa__c</fullName>
        <label>ID Task Aguardar Minuta Externa</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ID_Task_Aguardar_Pagamento__c</fullName>
        <label>ID Task Aguardar Pagamento</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ID_Task_Aguardar_assinatura_socios__c</fullName>
        <label>ID Task Aguardar assinatura sócios</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ID_Task_Alinhar_divergencia_com_cliente__c</fullName>
        <label>ID Task Alinhar divergência com cliente</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ID_Task_Analisa_Devolucao__c</fullName>
        <label>ID Task Analisa Devolucao</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ID_Task_Analisar_Alteracao__c</fullName>
        <label>ID Task Analisar Alteração</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ID_Task_Analisar_Baixa_de_Hipoteca__c</fullName>
        <label>ID Task Analisar Baixa de Hipoteca</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ID_Task_Analisar_Caso_Antecipacao__c</fullName>
        <label>ID Task Analisar Caso Antecipacao</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ID_Task_Analisar_Caso_Cessao__c</fullName>
        <label>ID Task Analisar Caso Cessão</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ID_Task_Analisar_Caso_Postergacao__c</fullName>
        <label>ID Task Analisar Caso Postergacao</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ID_Task_Analisar_Documentos__c</fullName>
        <label>ID Task Analisar Documentos</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ID_Task_Analisar_Modificacoes__c</fullName>
        <label>ID Task Analisar Modificações</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ID_Task_Analisar_Pendencia__c</fullName>
        <label>ID Task Analisar Pendência</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ID_Task_Analisar_Projeto__c</fullName>
        <label>ID Task Analisar Projeto</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ID_Task_Analisar_Repasse__c</fullName>
        <label>ID Task Analisar Repasse</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ID_Task_Analisar_Rescisao_com_Cliente__c</fullName>
        <label>ID Task Analisar Rescisao com Cliente</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ID_Task_Analisar_Seguridade__c</fullName>
        <label>ID Task Analisar Seguridade</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ID_Task_Analisar_Solicita_o_de_Modifica__c</fullName>
        <label>ID Task Analisar Solicitação de Modifica</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ID_Task_Analisar_Solicita_o_do_Cliente__c</fullName>
        <label>ID Task Analisar Solicitação do Cliente</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ID_Task_Analisar_renegociacao__c</fullName>
        <label>ID Task Analisar Renegociação</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ID_Task_Analisar_solicita_o_de_altera__c</fullName>
        <label>ID Task Analisar solicitação de alteraçã</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ID_Task_Analise_Juridica_AF__c</fullName>
        <label>ID Task Analise Juridica AF</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ID_Task_Analise_Juridica_Caso__c</fullName>
        <label>ID Task Analise Juridica do Caso</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ID_Task_Analise_Juridica_Contratos_Venda__c</fullName>
        <label>ID Task Analise Juridica Contratos Venda</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ID_Task_Analise_Juridica_de_Contratos__c</fullName>
        <label>ID Task Analise Juridica de Contratos</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ID_Task_Analise_do_Caso__c</fullName>
        <label>ID Task Analise do Caso</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ID_Task_Anexar_Rescisao_Judicial__c</fullName>
        <label>ID Task Anexar Rescisão Judicial</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ID_Task_Apresentar_Proposta_Antecipacao__c</fullName>
        <label>ID Task Apresentar Proposta Antecipacao</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ID_Task_Apresentar_Proposta_ao_Cliente__c</fullName>
        <label>ID Task Apresentar Proposta ao Cliente</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ID_Task_Assinatura_Minuta__c</fullName>
        <label>ID Task Assinatura Minuta</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ID_Task_Baixar_Pagamento__c</fullName>
        <label>ID Task Baixar Pagamento</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ID_Task_Calcular_Custas__c</fullName>
        <label>ID Task Calcular Custas</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ID_Task_Colher_Assinatura_Baixar_Credito__c</fullName>
        <label>ID Task Colher Assinatura_Baixar Crédito</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ID_Task_Compilar_Pend_ncias__c</fullName>
        <label>ID Task Compilar Pendências</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ID_Task_Conferencia_de_Contratos__c</fullName>
        <label>ID Task Conferência de Contratos</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ID_Task_Conferir_Minuta__c</fullName>
        <label>ID Task Conferir Minuta</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ID_Task_Contatar_Cliente__c</fullName>
        <label>ID Task Contatar Cliente</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ID_Task_Controle_Repasse__c</fullName>
        <label>ID Task Controle Repasse</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ID_Task_Definir_Modalidade_Entrega__c</fullName>
        <label>ID Task Definir Modalidade Entrega</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ID_Task_Devolucao_de_Cheque__c</fullName>
        <label>ID Task Devolução de Cheque</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ID_Task_Distratar_Venda__c</fullName>
        <label>ID Task Distratar Venda</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ID_Task_Elaborar_Calculo_Rescisao__c</fullName>
        <label>ID Task Elaborar Calculo Rescisao</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ID_Task_Elaborar_Memorial_Descritivo__c</fullName>
        <label>ID Task Elaborar Memorial Descritivo</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ID_Task_Elaborar_Orcamento__c</fullName>
        <label>ID Task Elaborar Orçamento</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ID_Task_Elaborar_Planta_e_Or_amento__c</fullName>
        <label>ID Task Elaborar Planta e Orçamento</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ID_Task_Elaborar_Proposta_Pagamento__c</fullName>
        <label>ID Task Elaborar Proposta de Pagamento</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ID_Task_Elaborar_Solitacao_Pagamento__c</fullName>
        <label>ID Task Elaborar Solitacao Pagamento</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ID_Task_Emitir_Onus_Reais__c</fullName>
        <label>ID Task Emitir Onus Reais</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ID_Task_Emitir_Termo_Quitacao__c</fullName>
        <label>ID Task Emitir Termo de Quitacao</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ID_Task_Emitir_e_Preencher_Minuta__c</fullName>
        <label>ID Task Emitir e Preencher Minuta</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ID_Task_Encaminhar_Chaves__c</fullName>
        <label>ID Task Encaminhar Chaves</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ID_Task_Encerrar_Caso__c</fullName>
        <label>ID Task Encerrar Caso</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ID_Task_Entrar_em_Contato_Cliente__c</fullName>
        <label>ID Task Entrar em Contato Cliente</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ID_Task_Entregar_Chaves__c</fullName>
        <label>ID Task Entregar Chaves</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ID_Task_Enviar_Aprovacao__c</fullName>
        <label>ID Task Enviar Aprovação</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ID_Task_Enviar_Banco_Baixar_Credito__c</fullName>
        <label>ID Task Enviar Banco/Baixar Crédito</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ID_Task_Enviar_Documentacao__c</fullName>
        <label>ID Task Enviar Documentação</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ID_Task_Enviar_Termo_de_Vistoria__c</fullName>
        <label>ID Task Enviar Termo de Vistoria</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ID_Task_Enviar_documentacao_correios__c</fullName>
        <label>ID Task Enviar documentação correios</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ID_Task_Formalizar_Repasse__c</fullName>
        <label>ID Task  Formalizar Repasse</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ID_Task_Gerar_Boleto_Interveniencia__c</fullName>
        <label>ID Task Gerar Boleto Interveniencia</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ID_Task_Gerar_Boleto__c</fullName>
        <label>ID Task Gerar Boleto</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ID_Task_Identificar_Documentacao__c</fullName>
        <label>ID Task Identificar Documentação</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ID_Task_Implantar_Aliena_o_Fiduci_ria__c</fullName>
        <label>ID Task Implantar Alienação Fiduciária</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ID_Task_Implantar_Cobranca__c</fullName>
        <label>ID Task Implantar Cobrança</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ID_Task_Implantar_Custas__c</fullName>
        <label>ID Task Implantar Custas</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ID_Task_Implantar_Negociacao_UAU_CRM__c</fullName>
        <label>ID Task Implantar Negociacao UAU CRM</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ID_Task_Implantar_Negociacao__c</fullName>
        <label>ID Task Implantar Negociação</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ID_Task_Informar_Aprovacao_ao_Cliente__c</fullName>
        <label>ID Task Informar Aprovação ao Cliente</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ID_Task_Informar_Dados_de_Registro__c</fullName>
        <label>ID Task Informar Dados de Registro</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ID_Task_Informar_Debitos_Unidade__c</fullName>
        <label>ID Task Informar Debitos Unidade</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ID_Task_Informar_Negativa_Escritura__c</fullName>
        <label>ID Task Informar Negativa Escritura</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ID_Task_Informar_Negativa_ao_Cliente__c</fullName>
        <label>ID Task Informar Negativa ao Cliente</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ID_Task_Informar_modifica_o_e_valores__c</fullName>
        <label>ID Task Informar modificação e valores</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ID_Task_Intimar_Via_RGI__c</fullName>
        <label>ID Task Intimar Via RGI</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ID_Task_Liberar_Chaves__c</fullName>
        <label>ID Task Liberar Chaves</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ID_Task_Liberar_Unidade_para_Estoque__c</fullName>
        <label>ID Task Liberar Unidade para Estoque</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ID_Task_Montar_Processo_Registro__c</fullName>
        <label>ID Task Montar Processo de Registro</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ID_Task_Negociar_Cliente_Financiamento__c</fullName>
        <label>ID Task Negociar Cliente Financiamento</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ID_Task_Negociar_Permuta__c</fullName>
        <label>ID Task Negociar Permuta</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ID_Task_Negociar_Quitacao__c</fullName>
        <label>ID Task Negociar Quitação</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ID_Task_Notificar_Extrajudicial_Entr_Doc__c</fullName>
        <label>ID Task Notificar Extrajudicial Entr.Doc</label>
        <length>20</length>
        <type>Text</type>
    </fields>
</CustomObject>